Support proxies based on both CGLib and raw JVM reflection
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45476 13f79535-47bb-0310-9956-ffa450edef68